Change Table 1 to long(er) format

--- a/article/CoMixNL_paper.tex
+++ b/article/CoMixNL_paper.tex
@@ -34,9 +34,7 @@ From early 2020 onwards, COVID-19 grew into a global pandemic within a few month
 
 In the Netherlands, the first nation-wide lockdown was imposed on March 15th, 2020 involving all of the above measures. It was lifted stepwise on May 11th (opening of schools), June 1st (outside bars and restaurants open a.o.) and July 1st (inside bars and restaurants open a.o.). The rise of the Alpha variant in winter 2020/2021 called for an even stricter lockdown including an evening curfew, that was relaxed from March 23rd, 2021 onwards while vaccination coverages were increasing. It is not known how the change in control measures affected the number of at-risk contacts in the Dutch general population.
 
-To learn about the effect of control measures on contact behaviour, many countries set up contact surveys \cite{Zhang_2020, Latsuzbaia_2020, Quaife_2020, Backer_2021, Bosetti_2021, Feehan_2021, Tomori_2021, Drolet_2022}. The POLYMOD study \cite{Mossong_2008} served as a blueprint for these as it did for many pre-COVID-19 studies \cite{Hoang_2019}. But while these pre-COVID-19 studies aimed to measure `normal' contact behaviour, the unprecedented measures that were taken during the pandemic gave a unique opportunity to determine contact behaviour under restricted conditions.
-
-As part of a European project, the CoMix survey was set up in April 2020 in Belgium, the UK, and the Netherlands, later followed by 19 other European countries \cite{Verelst_2021}. In this contact study, participants were asked to regularly report their contact behaviour, i.e. the number of unique persons they had contact with in certain locations per day, as well as some characteristics of the contacted persons such as age and sex. Participants were asked to report only at-risk contacts that could have led to an infection, specifically face-to-face conversational contacts and/or physical contacts. What sets the CoMix survey apart from other contact surveys is that it uses a standardised questionnaire in multiple countries and is repeated at regular intervals.
+To learn about the effect of control measures on contact behaviour, many countries set up contact surveys \cite{Zhang_2020, Latsuzbaia_2020, Quaife_2020, Backer_2021, Bosetti_2021, Feehan_2021, Tomori_2021, Drolet_2022}. The POLYMOD study \cite{Mossong_2008} served as a blueprint for these as it did for many pre-COVID-19 studies \cite{Hoang_2019}. But while these pre-COVID-19 studies aimed to measure `normal' contact behaviour, the unprecedented measures that were taken during the pandemic gave a unique opportunity to determine contact behaviour under restricted conditions. As part of a European project, the CoMix survey was set up in April 2020 in Belgium, the UK, and the Netherlands, later followed by 19 other European countries \cite{Verelst_2021}. In this contact study, participants were asked to regularly report their contact behaviour, i.e. the number of unique persons they had contact with in certain locations per day, as well as some characteristics of the contacted persons such as age and sex. Participants were asked to report only at-risk contacts that could have led to an infection, specifically face-to-face conversational contacts and/or physical contacts. What sets the CoMix survey apart from other contact surveys is that it uses a standardised questionnaire in multiple countries and is repeated at regular intervals.
 
 At the same time the CoMix survey started, a large-scale survey on SARS-CoV-2 serology was initiated in the Netherlands \cite{Vos_2021}. This Pienter Corona (PiCo) study was repeated every 4 to 6 months in a representative sample of the Dutch population involving ?? to ?? participants per survey round, and is still ongoing. It also included a contact question where the participants were asked to report the number of unique persons they contacted the day before in specific age groups. An early analysis of the first two survey rounds in 2020 showed that the first lockdown decreased the number of contacts per participant on average by ?\% compared to pre-COVID behaviour \cite{Backer_2021}. The PiCo survey rounds are however too far apart to closely monitor the contact behaviour in time.
 
@@ -168,11 +166,76 @@ population & & study & study & general\textsuperscript{a} & study & study & gene
   household size & 5+ & 90 & 5 & 12 & 235 & 9 & 12 \\ 
    \hline
 \end{tabular}
-\caption{\label{tab:part}Number of participants in the 2020 and 2021 series by participant characteristics.
+\caption{\label{tab:part_old}Number of participants in the 2020 and 2021 series by participant characteristics.
  \protect\linebreak \textsuperscript{a} Characteristics for 2020 general population based on 18+ population to match study population.
  \protect\linebreak \textsuperscript{b} Percentage of risk status in study population only calculated for participant with unambiguous risk status to allow comparison with general population.
 \protect\linebreak \textsuperscript{c} Expected household size distribution per Dutch citizen, based on Dutch households consisting of one (38\%), two (33\%), three (12\%), four (12\%) and five or more (5\%) persons \cite{Backer_2021}}
 \end{table}
+
+\begin{table}[ht]
+\centering
+\begin{tabular}{llrrr}
+  \hline
+  \hline
+  2020 series & & n & \% & reference\textsuperscript{a} (\%) \\ 
+  total & & 1659 & & \\
+  \hline
+  age group & 18-24 & 84 & 5 & 11 \\ 
+   & 25-34 & 236 & 14 & 16 \\ 
+   & 35-44 & 257 & 15 & 15 \\ 
+   & 45-54 & 337 & 20 & 18 \\ 
+   & 55-64 & 312 & 19 & 17 \\ 
+   & 65+ & 433 & 26 & 24 \\ 
+  \hline
+  gender & Female & 814 & 49 & 51 \\ 
+   & Male & 845 & 51 & 49 \\ 
+  \hline
+  high risk & mixed & 359 & \textsuperscript{b} &  \\ 
+   & no & 744 & 58 & 78 \\ 
+   & yes & 540 & 42 & 22 \\ 
+   & NA & 16 & \textsuperscript{b} &  \\ 
+  \hline
+  household size & 1 & 409 & 25 & 17\textsuperscript{c} \\ 
+   & 2 & 716 & 43 & 31 \\ 
+   & 3 & 241 & 15 & 17 \\ 
+   & 4 & 203 & 12 & 23 \\ 
+   & 5+ & 90 & 5 & 12 \\ 
+  \hline
+  \hline
+  2021 series & & n & \% & reference (\%) \\ 
+  total & & 2514 & & \\
+  \hline
+  age group & 0-11 & 240 & 10 & 12 \\ 
+   & 12-17 & 290 & 12 & 7 \\ 
+   & 18-24 & 511 & 20 & 9 \\ 
+   & 25-34 & 378 & 15 & 13 \\ 
+   & 35-44 & 254 & 10 & 12 \\ 
+   & 45-54 & 271 & 11 & 14 \\ 
+   & 55-64 & 230 & 9 & 14 \\ 
+   & 65+ & 340 & 14 & 20 \\ 
+  \hline
+  gender & Female & 1383 & 55 & 50 \\ 
+   & Male & 1131 & 45 & 50 \\ 
+  \hline
+  high risk & mixed & 385 & \textsuperscript{b} &  \\ 
+   & no & 1720 & 81 & 81 \\ 
+   & yes & 400 & 19 & 19 \\ 
+   & NA & 9 & \textsuperscript{b} &  \\ 
+  \hline
+  household size & 1 & 573 & 23 & 17\textsuperscript{c} \\ 
+   & 2 & 766 & 30 & 31 \\ 
+   & 3 & 444 & 18 & 17 \\ 
+   & 4 & 496 & 20 & 23 \\ 
+   & 5+ & 235 & 9 & 12 \\ 
+  \hline
+  \hline
+\end{tabular}
+\caption{\label{tab:part}Number of participants in the 2020 and 2021 series by participant characteristics.
+ \protect\linebreak \textsuperscript{a} Characteristics for 2020 general population based on 18+ population to match study population.
+ \protect\linebreak \textsuperscript{b} Percentage of risk status in study population only calculated for participants with unambiguous risk status to allow comparison with general population.
+\protect\linebreak \textsuperscript{c} Expected household size distribution per Dutch citizen, based on Dutch households consisting of one (38\%), two (33\%), three (12\%), four (12\%) and five or more (5\%) persons \cite{Backer_2021}}
+\end{table}
+
 
 
 \clearpage
