Combine figures 1 and 2 in multipanel plot

--- a/article/CoMixNL_paper.tex
+++ b/article/CoMixNL_paper.tex
@@ -36,7 +36,7 @@ In the Netherlands, the first nation-wide lockdown was imposed on March 15th, 20
 
 To learn about the effect of control measures on contact behaviour, many countries set up contact surveys \cite{Zhang_2020, Latsuzbaia_2020, Quaife_2020, Backer_2021, Bosetti_2021, Feehan_2021, Tomori_2021, Drolet_2022}. The POLYMOD study \cite{Mossong_2008} served as a blueprint for these as it did for many pre-COVID-19 studies \cite{Hoang_2019}. But while these pre-COVID-19 studies aimed to measure `normal' contact behaviour, the unprecedented measures that were taken during the pandemic gave a unique opportunity to determine contact behaviour under restricted conditions. As part of a European project, the CoMix survey was set up in April 2020 in Belgium, the UK, and the Netherlands, later followed by 19 other European countries \cite{Verelst_2021}. In this contact study, participants were asked to regularly report their contact behaviour, i.e. the number of unique persons they had contact with in certain locations per day, as well as some characteristics of the contacted persons such as age and sex. Participants were asked to report only at-risk contacts that could have led to an infection, specifically face-to-face conversational contacts and/or physical contacts. What sets the CoMix survey apart from other contact surveys is that it uses a standardised questionnaire in multiple countries and is repeated at regular intervals.
 
-At the same time the CoMix survey started, a large-scale survey on SARS-CoV-2 serology was initiated in the Netherlands \cite{Vos_2021}. This Pienter Corona (PiCo) study was repeated every 4 to 6 months in a representative sample of the Dutch population involving ?? to ?? participants per survey round, and is still ongoing. It also included a contact question where the participants were asked to report the number of unique persons they contacted the day before in specific age groups. An early analysis of the first two survey rounds in 2020 showed that the first lockdown decreased the number of contacts per participant on average by ?\% compared to pre-COVID behaviour \cite{Backer_2021}. The PiCo survey rounds are however too far apart to closely monitor the contact behaviour in time.
+At the same time the CoMix survey started, a large-scale survey on SARS-CoV-2 serology was initiated in the Netherlands \cite{Vos_2021}. This Pienter Corona (PiCo) study was repeated every 4 to 6 months in a representative sample of the Dutch population involving a few thousand participants per survey round, and is still ongoing. It also included a contact question where the participants were asked to report the number of unique persons they contacted the day before in specific age groups. An early analysis of the first two survey rounds in 2020 showed that the first lockdown decreased the number of community contacts per participant on average by 76\% compared to pre-COVID behaviour \cite{Backer_2021}. The PiCo survey rounds are however too far apart to closely monitor the contact behaviour in time.
 
 Our aim is to describe how control measures affected the contact behaviour of the Dutch general population, using the CoMix data that was collected in the Netherlands during the survey periods in 2020 and 2021. We will focus on the number of contacts per participant outside the household because contacts with household members are not subject to control measures. As a validation, the results are compared to four survey rounds of the PiCo survey that coincided with the CoMix study periods.
 
@@ -45,37 +45,41 @@ Our aim is to describe how control measures affected the contact behaviour of th
 
 \subsection*{CoMix participant recruitment and survey design in the Netherlands}
 
-This contact survey was part of the CoMix study that was conducted in several EU countries and the UK \cite{Verelst_2021}. Participants were recruited by the market research company Ipsos-MORI, and filled out the contact survey online. The study was carried out in two survey periods: 8 survey rounds from 16 April to 5 August 2020, referred to as the 2020 series, and 20 survey rounds from 23 December 2020 to 22 September 2021, referred to as the 2021 series. At the start of the 2020 series 1500 participants of 18 years and older were recruited, reflecting the age distribution of the Dutch population. An overall drop-out rate of 10\% per round was allowed, but these rates differed per age group leading to very few participants in the youngest age group of 18-24 in the last rounds of the 2020 series (Fig \ref{fig:part}). For this reason, the younger age groups were oversampled at the start of the 2021 series with 1200 participants of 18 years and older. In addition, 300 children between 0 and 17 years of age were included by asking adult participants to fill out the contact survey for one of their children. After 10 rounds, the age cohorts were supplemented to include 1500 participants in total again in May 2021.
+This contact survey was part of the CoMix study that was conducted in several EU countries and the UK \cite{Verelst_2021}. Participants were recruited by the market research company Ipsos-MORI, and filled out the contact survey online. The study was carried out in two survey periods: 8 survey rounds from 16 April to 5 August 2020, referred to as the 2020 series, and 20 survey rounds from 23 December 2020 to 22 September 2021, referred to as the 2021 series. At the start of the 2020 series, 1500 participants of 18 years and older were recruited, reflecting the age distribution of the Dutch population. An overall drop-out rate of 10\% per round was allowed, but these rates differed per age group leading to very few participants in the youngest age group of 18-24 in the last rounds of the 2020 series (Fig \ref{fig:part}). For this reason, the younger age groups were oversampled at the start of the 2021 series with 1200 participants of 18 years and older. In addition, 300 children between 0 and 17 years of age were included by asking adult participants to fill out the contact survey for one of their children. After 10 rounds, the age cohorts were supplemented to include 1500 participants in total again in May 2021.
 
-The contact survey was repeated every two weeks. In each round participants were asked about characteristics that can change over time, such as risk perception, risk status and vaccination status against COVID-19. High risk participants were people with chronic respiratory disease, chronic heart disorder, chronic kidney disease, diabetes, reduced resistance to infection (due to illness or medication), morbid obesity (BMI over 40), and pregnant women, i.e. reflecting the medical indication for influenza vaccination. Missing data in the risk status were completed with the most common risk status reported over the survey rounds by the participant. The risk status of participants can change by survey round. The fraction of high risk participants is calculated per age group using only the participants with unambiguous risk status, and compared to the population fraction with a medical indication for influenza vaccination \cite{Nivel_2021}. Participants are considered to be vaccinated after they have reported to have had at least one vaccination dose. The fraction of vaccinated participants is compared to the vaccination coverage of one vaccine dose in the general population over time \cite{RIVM_2022}. 
+The contact survey was repeated every two weeks and a survey round lasted at most 7 days, except for the survey rounds where many new participants were recruited that were allowed more time to fill out the questionnaire. In each survey round participants were asked about characteristics that can change over time, such as risk perception, risk status and vaccination status against COVID-19. High risk participants were people with chronic respiratory disease, chronic heart disorder, chronic kidney disease, diabetes, reduced resistance to infection (due to illness or medication), morbid obesity (BMI over 40), and pregnant women, i.e. reflecting the medical indication for influenza vaccination. Missing data in the risk status were completed with the most common risk status reported over the survey rounds by the participant. The risk status of participants can change by survey round. The fraction of high risk participants is calculated per age group using only the participants with unambiguous risk status, and compared to the population fraction with a medical indication for influenza vaccination \cite{Nivel_2021}. 
 
-In the main part of the survey, participants report their contact behaviour of the previous day. This consists of the persons they had conversational or physical contact with and their characteristics, such as age group and gender, as well as duration and location of the contact. From the third survey round onwards in late May 2020, it was also possible to report group contacts, where the total number of contacted persons in broad age groups (0-17, 18-64, 65+) at work, school or another location could be filled out, instead of individually. More details on the CoMix study and questionnaire can be found in previous publications \cite{Jarvis_2020, Verelst_2021, Gimma_2022}.
+The 2021 series coincided with the roll-out of the COVID-19 vaccination campaign. Health care workers, persons with a high medical risk and care home residents were vaccinated with priority, while the non-risk groups were vaccinated from elderly to young. Most persons were vaccinated with either BionTech/Pfizer, Moderna or Janssen vaccine by the Municipal Health Services, except for 60-64 year olds who were vaccinated at an early stage with AstraZeneca by their general practitioner. Participants are considered to be vaccinated after they have reported to have had at least one vaccination dose. The fraction of vaccinated participants is compared to the vaccination coverage of one vaccine dose in the general population over time \cite{RIVM_2022}. 
+
+In the main part of the survey, participants reported their contact behaviour of the previous day. For each unique person they had conversational or physical contact with between 5am on the previous day until 5am of the survey day, participants filled out the characteristics of the contacted person, such as age group and gender, as well as duration and location of the contact event. Multiple contact events with the same person were to be considered as one contact, and only contact events with a close physical proximity were to be reported, i.e. excluding online or phone contacts. Besides these individual contacts, it was also possible to report group contacts from the third survey round onwards in late May 2020. Group contacts were reported as the total number of contacted persons in broad age groups (0-17, 18-64, 65+) at work, school or another location. More details on the CoMix study and questionnaire can be found in previous publications \cite{Jarvis_2020, Verelst_2021, Gimma_2022}.
 
 
 \subsection*{Analysis of number of contacts}
 
-The number of contacts per participant is studied separately for three age groups (0-17, 18-64, 65+) and two series (2020, 2021). Only contacts with non-household members are included, as these are most likely to change over the course of the study period. Twelve occasions were excluded where participants reported more than 1000 contacts in a single round, and 58 participants were excluded that participated in four or more rounds but did not report any contact.
+The participants are stratified into three age groups (0-17, 18-64, 65+) and two series (2020, 2021). Only contacts with non-household members are included, as these are most likely to change over the course of the study period. Twelve occasions were excluded where participants reported more than 1000 contacts in a single survey round, and 58 participants were excluded that participated in four or more rounds but did not report any contact.
 
-Previous research has shown that contacts often follow a power-law distribution, where most people have relatively few contacts per day while some have many \cite{Liljeros_2001}. The number of contacts was visually checked for such powerlaw-like behaviour by plotting the complementary cumulative distribution function of the number of contacts on a loglog scale. A linear relation indicates a powerlaw, and as a consequence the distribution of number of contacts lacks clearly defined moments. Depending on the powerlaw coefficient, even the mean and variance of the distribution may lack meaning \cite{Tagore_2015}, which precludes the use of parametric distributions. One option to overcome this, is to cap the number of contacts to a lower maximum, such as 50, and assume the number of contacts follows a negative binomial distribution. Instead, we define activity levels of 0, 1, 2, 3-4, 5-9, $\geq$ 10 contacts per participant per round and analyse these using ordinal regression. The levels are chosen in such a way that the activity levels higher than 0 contain similarly sized fractions of reported number of contacts.
-
-The activity levels are outcome variables of a generalised additive model with fixed effects for participant vaccination status, participant risk status, weekends and (school)holidays, cubic splines for calendar time, participant age, participant round (i.e. the n\textsuperscript{th} time a participant participated), and random intercepts for participant id: 
+The distribution of the number of contacts per participant per round had a heavy tail, which can result in unstable estimates of the variance \cite{Tagore_2015}. Instead of using a parametric distribution, we define activity levels of 0, 1, 2, 3-4, 5-9, $\geq$ 10 contacts per participant per round and analyse these using ordinal regression. The activity levels are used as variables of a generalised additive model with fixed effects for participant vaccination status, participant risk status, weekends and (school)holidays, cubic splines for calendar time, participant age, participant round (i.e. the n\textsuperscript{th} time a participant participated), and a random intercept for each participant. The statistic model can be described as:
 
 \begin{align*}
-Pr(\mathrm{activity} \leq l, X) = \: \Phi[ & \theta_l - (\beta_\mathrm{id} + \beta_0 + \beta_1 * s(\mathrm{date}) + \beta_2 * s(\mathrm{part\_round}) + \beta_3 * s(\mathrm{part\_age}) + \\
+Pr(\mathrm{activity} \leq l) = \: \Phi[ & \theta_l - (\beta_\mathrm{id} + \beta_0 + \beta_1 * s(\mathrm{date}) + \beta_2 * s(\mathrm{part\_round}) + \beta_3 * s(\mathrm{part\_age}) + \\
 & \beta_4 * \mathrm{part\_vacc} + \beta_5 * \mathrm{part\_risk} + \beta_6 * \mathrm{weekend} + \beta_7 * \mathrm{holiday})],
 \end{align*}
 
-where $\Phi$ is the logistic function, $\theta_l$ are the set of thresholds identifying the boundaries between the activity levels $l$, $\beta_\mathrm{id}$ are the random intercepts centered about zero and the $s()$ function indicates that splines are used. The fits are assessed by explained deviance and by comparing the predicted activity levels to the observations. Next, the fitted results are used in a synthetic population that has the size of the study population, but reflects the general population. It is constructed by sampling age, risk status and vaccination status at each day from the general population \cite{CBS_2021}. Participant id's are sampled with replacement from the study population, and participant round is set to 1 for each day during the study period. 200 parameter sets are sampled from the estimated model parameters, and combined with 200 synthetic populations, to capture both the uncertainty of the model parameters and the uncertainty caused by the sample size of the study population. The predicted activity levels of the synthetic population are compared to the activity levels measured in four Pienter Corona (PiCo) surveys.
+where $\Phi$ is the logistic function, $\theta_l$ are the thresholds for the activity levels $l$, $\beta_\mathrm{id}$ are the random intercepts and the $s()$ function indicates that splines are used. The fits are assessed by explained deviance and by comparing the fitted activity levels to the observations. 
 
-All analyses are performed in R version 4.1.3 \cite{R_2022} using the \textit{mgcv} package \cite{Wood_2017} with family \textit{ocat} for ordered categorical variables. Code is available at REFgithub, and data is published at Zenodo \cite{Bogaardt_2022} in the standardised format of \textit{socialcontactdata.org}.
+Next, the fitted results are used in a synthetic population that has the same size as the study population, but reflects the general population, with respect to age\cite{CBS_2021}, risk status\cite{Nivel_2021} and vaccination status\cite{RIVM_2022} at each day of the study periods. Participant id's are sampled with replacement from the study population, and participant round is set to 1 for each day during the study period. 200 parameter sets are sampled from the estimated model parameters, and combined with 200 synthetic populations, to capture both the uncertainty of the model parameters and the uncertainty caused by the sample size of the study population. As a validation, the predicted activity levels of the synthetic population are compared to the activity levels measured in PiCo survey rounds 1 (Apr 2020), 2 (Jun 2020), 4 (Feb 2021) and 5 (Jun 2021).
+
+All analyses are performed in R version 4.1.3 \cite{R_2022} using the \textit{mgcv} package \cite{Wood_2017} with family \textit{ocat} for ordered categorical variables. Code is available on Github \cite{Github_RIVM}, and data is published on Zenodo \cite{Zenodo_2022} in the standardised format of \textit{socialcontactdata.org}.
 
 \section*{Results}
 
 \subsection*{Study population}
 
-In total, 1659 participants were included in the 2020 series, and 2514 participants in the 2021 series. Participants were equally distributed over men and women in 2020, while female participants were slightly overrepresented in 2021. Household sizes of 2 persons were most common (Tab. \ref{tab:part}). Each series started with a target population of 1500 participants, distributed over different age groups according to the Dutch population over 18 years of age in the 2020 series, and according to a preferential sampling scheme in the 2021 series (Tab \ref{tab:part_round}, Fig \ref{fig:part_round}). The number of participants declined after recruitment. In 2020 the drop-out rate was on average 4\% per round in the oldest age group and 14\% in the youngest age group; in 2021 drop out rates were more comparable for all age groups (Fig. \ref{fig:part}).
+In total, 1659 participants were included in the 2020 series, and 2514 participants in the 2021 series. Participants were equally distributed over men and women in 2020, while female participants were slightly overrepresented in 2021. Household sizes of 2 persons were most common (Tab. \ref{tab:part}). Each series started with a target population of 1500 participants, distributed over different age groups according to the Dutch population over 18 years of age in the 2020 series, and according to a preferential sampling scheme in the 2021 series (Tab \ref{tab:part_round}, Fig \ref{fig:part_round}). The number of participants declined after recruitment. In 2020 the drop-out rate was on average 4\% per round in the oldest age group and 14\% in the youngest age group; in 2021 drop out rates were more comparable for all age groups (Fig. \ref{fig:part}A).
 
-The 2021 series coincided with the roll-out of the COVID-19 vaccination campaign. Health care workers, persons with a high medical risk and care home residents were vaccinated with priority, while the non-risk groups were vaccinated from elderly to young. Most persons were vaccinated with either BionTech/Pfizer, Moderna or Janssen vaccine by the Municipal Health Services, except for 60-64 year olds who were vaccinated at an early stage with AstraZeneca by their general practitioner. The vaccination coverage of the study population increases over time largely in agreement with the general population (Fig. \ref{fig:vacc_risk}). The participants in the age groups of 18-34 years achieve a higher vaccination coverage at an earlier stage than the general population. The participants in the age group of 65 years and older lag behind the general population. The fraction of high risk adult participants is higher than in the general population.
+%The 2021 series coincided with the roll-out of the COVID-19 vaccination campaign. Health care workers, persons with a high medical risk and care home residents were vaccinated with priority, while the non-risk groups were vaccinated from elderly to young. Most persons were vaccinated with either BionTech/Pfizer, Moderna or Janssen vaccine by the Municipal Health Services, except for 60-64 year olds who were vaccinated at an early stage with AstraZeneca by their general practitioner. 
+
+The fraction of high risk adult participants is higher than in the general population, especially in the 2020 series (Fig. \ref{fig:part}B). The vaccination coverage of the study population increases over time largely in agreement with the general population (Fig. \ref{fig:part}C). The participants in the age groups of 18-34 years achieve a higher vaccination coverage at an earlier stage than the general population. The participants in the age group of 65 years and older lag behind the general population. 
 
 
 \subsection*{Contact behaviour}
@@ -202,23 +206,12 @@ J.B. managed the data collection, L.B. curated the data, J.B. and L.B. analysed 
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=\linewidth]{../figures/number_participants.png}
-\caption{Number of participants included per survey round in the 2020 and 2021 series, by age group. After 10 survey rounds in May 2021, the study population was supplemented to meet the target numbers of the first survey round again.}
+\includegraphics[width=\linewidth]{../figures/characteristics_studypopulation.png}
+\caption{Characteristics of study population, compared to general population. \textbf{A} Number of participants included per survey round in the 2020 and 2021 series, by age group. After 10 survey rounds in May 2021, the study population was supplemented to meet the target numbers of the first survey round again.  \textbf{B} The fraction of high risk participants of the 2020 and 2021 series (points with 95\% confidence interval), and of the general population \cite{Nivel_2021} (bars). Only participants with unambiguous risk status are included. \textbf{C} Vaccination coverage in 2021 per age group of the study population (points with 95\% confidence interval) and of the general population \cite{RIVM_2022} (line). The dashed line denotes the average date when non-risk groups were invited for vaccination. The dashed line for the 55-64 age group is in fact the average for 55-59 year olds, as 60-64 year olds were invited by their general practitioner. }
 \label{fig:part}
 \end{figure}
 
 \clearpage
-
-
-\begin{figure}[ht]
-\centering
-\includegraphics[width=\linewidth]{../figures/vaccination_coverage_high_risk.png}
-\caption{Vaccination and risk status of study and general population. First eight panels show the vaccination coverage in 2021 per age group of the study population (points with 95\% confidence interval) and of the general population \cite{RIVM_2022} (line). The dashed line denotes the average date when non-risk groups were invited for vaccination. The dashed line for the 55-64 age group is in fact the average for 55-59 year olds, as 60-64 year olds were invited by their general practitioner. The last panel shows the fraction of high risk participants of the 2020 and 2021 series combined (points with 95\% confidence interval), and of the general population \cite{Nivel_2021} (bars).}
-\label{fig:vacc_risk}
-\end{figure}
-
-\clearpage
-
 
 \begin{figure}[ht]
 \centering
@@ -232,7 +225,7 @@ J.B. managed the data collection, L.B. curated the data, J.B. and L.B. analysed 
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{../figures/prediction_studypopulation_cat6.png}
-\caption{Predicted and observed activity levels over time by series (columns) and age group (rows). Activity levels are shown as the fraction of participants that report less than a certain number of contacts outside the household. With five limits (0, <2, <3, <5 and <10) six activity levels are defined, e.g. the fraction between the limits of <3 and <5 is the activity level that represents 3 or 4 contacts per participant. The model predictions per round are shown by the median (lines) and 95\% prediction interval (shaded), from the first to last participation date. The observed activity levels per round (open circles) are placed at the mean participation date. Holidays and school holiday periods are shaded in grey.}
+\caption{Fitted and observed activity levels over time by series (columns) and age group (rows). Activity levels are shown as the fraction of participants that report less than a certain number of contacts outside the household. With five limits (0, <2, <3, <5 and <10) six activity levels are defined, e.g. the fraction between the limits of <3 and <5 is the activity level that represents 3 or 4 contacts per participant. The model predictions per round are shown by the median (lines) and 95\% prediction interval (shaded), from the first to last participation date. The observed activity levels per round (open circles) are placed at the mean participation date. Holidays and school holiday periods are shaded in grey.}
 \label{fig:studypop}
 \end{figure}
 
@@ -241,7 +234,7 @@ J.B. managed the data collection, L.B. curated the data, J.B. and L.B. analysed 
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\linewidth]{../figures/prediction_generalpopulation_cat6.png}
-\caption{Predicted activity levels over time by series (columns) and age group (rows) for the general population. Activity levels are shown as the fraction of the population that has less than a certain number of contacts outside the household. With five limits (0, <2, <3, <5 and <10) six activity levels are defined, e.g. the fraction between the limits of <3 and <5 is the activity level that represents 3 or 4 contacts per person. The model predictions are shown by the median (lines) and 95\% prediction interval (shaded). The activity levels observed in the contact survey of the independent PiCo study are shown for comparison per round at the mean participation date (points). Holidays and school holiday periods are shaded in grey.}
+\caption{Predicted activity levels over time by series (columns) and age group (rows) for the general population. Activity levels are shown as the fraction of the population that has less than a certain number of contacts outside the household. With five limits (0, <2, <3, <5 and <10) six activity levels are defined, e.g. the fraction between the limits of <3 and <5 is the activity level that represents 3 or 4 contacts per person. The model predictions are shown by the median (lines) and 95\% prediction interval (shaded). The activity levels observed in the contact survey of the independent PiCo study are shown for comparison per round at the mean participation date (points), with bootstrapped 95\% confidence intervals. Holidays and school holiday periods are shaded in grey.}
 \label{fig:genpop}
 \end{figure}
 
